--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -16,10 +16,8 @@ jobs:
           distribution: 'zulu' # distributions
           java-version: '17'
       - uses: Xotabu4/selenoid-github-action@v2
-
-
           # запускаем тесты
-      - run: ./gradlew clean test -Dselenide.remote=https://your.grid.com:4444/wd/hub
+      - run: ./gradlew clean test -Dselenide.remote=http://localhost:4444/wd/hub
 # Скачиваем историю тестов
       - uses: actions/checkout@v2
         if: always()
