--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -16,10 +16,12 @@ jobs:
           distribution: 'zulu' # distributions
           java-version: '17'
       - uses: Xotabu4/selenoid-github-action@v2
-          # запускаем тесты
+        with:
+         version: '1.10.7'
+        # запускаем тесты
       - run: ./gradlew clean test -Dselenide.remote=http://localhost:4444/wd/hub
 # Скачиваем историю тестов
-      - uses: actions/checkout@v2
+      - uses: actions/checkout@v5
         if: always()
         continue-on-error: true
         with:
@@ -34,7 +36,7 @@ jobs:
            allure_report: allure-report
            allure_history: allure-history
 # публикуем отчет
-      - uses: peaceiris/actions-gh-pages@v2
+      - uses: peaceiris/actions-gh-pages@v4
         if: always()
         env:
            PERSONAL_TOKEN: ${{ secrets.GITHUB_TOKEN }}
