--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -47,25 +47,23 @@ jobs:
           ls -la .aerokube/selenoid/
           cat .aerokube/selenoid/browsers.json
       
-      - name: Start Selenoid manually
+      - name: Start Selenoid
         run: |
           docker run -d --name selenoid \
             -p 4444:4444 \
             --shm-size=2g \
             -v /var/run/docker.sock:/var/run/docker.sock \
-            -v ${PWD}/.aerokube/selenoid:/etc/selenoid:ro \   # монтируем в /etc/selenoid (стандартный путь)
+            -v ${PWD}/.aerokube/selenoid:/etc/selenoid:ro \
             aerokube/selenoid:latest-release \
-            -conf /etc/selenoid/browsers.json \   # ← правильный флаг и путь к файлу
-            --limit 10 \
+            -conf /etc/selenoid/browsers.json \
+            -limit 10 \
             --tmpfs 128
       
-          # Ждём, пока Selenoid запустится
-          sleep 15
+          sleep 20
       
-          # Проверяем статус (если упадёт — покажет логи)
-          curl --fail http://localhost:4444/status || { docker logs selenoid; exit 1; }
+          curl --fail --retry 3 --retry-delay 5 http://localhost:4444/status || { docker logs selenoid; exit 1; }
       
-          echo "Selenoid status:"
+          echo "Selenoid is running:"
           curl http://localhost:4444/status
 
       # 4. Запускаем тесты (selenide.remote уже должен работать)
