--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -21,7 +21,7 @@ jobs:
         with:
           distribution: 'zulu'
           java-version: '17'
-
+      # 3. Настройка Selenoid
       - name: Prepare minimal Selenoid config
         run: |
           mkdir -p .aerokube/selenoid
@@ -46,7 +46,7 @@ jobs:
       
           ls -la .aerokube/selenoid/
           cat .aerokube/selenoid/browsers.json
-      
+      # 3. Запуск Selenoid
       - name: Start Selenoid
         run: |
           docker run -d --name selenoid \
@@ -67,6 +67,8 @@ jobs:
           curl http://localhost:4444/status
 
       # 4. Запускаем тесты (selenide.remote уже должен работать)
+      - name: Grant execute permission for gradlew
+        run: chmod +x ./gradlew
       - name: Run Gradle tests
         run: ./gradlew clean test -Dselenide.remote=http://localhost:4444/wd/hub
 
